7.8.0
 - New `array` class for easier parsing of SQL arrays.
 - Use `array_parser` only on comma-separated types, i.e. most of them. (#590)
 - Bumping requirements versions: need postgres 10.
 - Fix `array_parser` bug when parsing semicolon in an unquoted string.
 - Faster text decoding in `stream_from`, and escaping in `stream_to`.  (#601)
 - At last, streaming throughput is faster (on my system) than a regular query.
 - Deprecate `basic_fieldstream` and `fieldstream`.
 - Deprecate `<<` operator inserting a field into an `ostream`.
 - Ran `autoupdate` (because the autotools told me to).
 - Documentation tweak. (#584)
 - Typo in README.md. (#586)
 - Support `std::optional<std::string_view>` etc. in `stream_to`. (#596)
 - Remove support for single-quoted array/composite elements.  No such thing!
 - Optimise out a kink in composite field parser.`
 - Work around build warning in MinGW: include `winsock2.h` before `windows.h`.
7.7.4
 - `transaction_base::for_each()` is now called `for_stream()`. (#580)
 - New `transaction_base::for_query()` is similar, but non-streaming. (#580)
 - Query data and iterate directly as client-side types: `query()`. (#580)
 - New ways to query a single row!  `query01()` and `query1()`. (#580)
 - We now have 3 kinds of execution: "exec", "query", and "stream" functions.
 - Use C++23 `std::unreachable()` where available.
 - `result::iter()` return value now keeps its `result` alive.
7.7.3
 - Fix up more damage done by auto-formatting.
 - New `result::for_each()`: simple iteration and conversion of rows.  (#528)
 - Add some missing headers in `<pqxx/pqxx>`.  (#551)
 - More strictness in `header-pre.hxx`/`header-post.hxx` checking.
 - Disallow nesting of `ignore-deprecated` blocks.
 - Deprecate `exec` functions' `desc` parameter.
 - Fix `placeholders` documentation.  (#557)
 - Strip `const` and references from `value_type`. (#558)
 - Get tests running on appveyor. (#560)
 - Fix broken nonblocking connection on Windows. (#560)
7.7.2